<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/background"
        android:background="@drawable/shape_background_corner_bottom"
        android:padding="24dp">



        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:maxLength="28"
            android:maxLines="1"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Food Name" />



        <TextView
            android:id="@+id/tvCalories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@{`Kalori: ` + foodItem.calories}"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_food_name"
            tools:text="Calories: 200" />

        <TextView
            android:id="@+id/tvCarbs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{`Karbohidrat: ` + foodItem.carbohydrate}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCalories"
            android:layout_marginTop="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:text="Carbs: 50g"/>

        <TextView
            android:id="@+id/tvProteins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{`Protein: ` + foodItem.protein}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCarbs"
            android:layout_marginTop="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:text="Protein: 25g"/>

        <TextView
            android:id="@+id/tvFats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{`Lemak: ` + foodItem.fat}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProteins"
            android:layout_marginTop="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="normal"
            tools:text="Fats: 10g"/>

        <ToggleButton
            android:id="@+id/btn_add_food"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/baseline_add_24"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textOff=""
            android:textOn=""
            app:backgroundTint="?android:attr/textColorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_background"
            android:backgroundTint="?attr/backgroundColor"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/connecting"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_on_fail_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_background"
            android:backgroundTint="?attr/backgroundColor"
            android:elevation="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/disconnected"
                android:src="@drawable/ic_no_internet"
                app:tint="?android:attr/textColorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/disconnected"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/disconnected"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/primary_500"
                android:text="@string/refreshing" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
